--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -57,6 +57,14 @@ ul {
 	}
 }
 
+.align-center {
+  text-align: center;
+  
+  > * {
+    margin: auto;
+  }
+}
+
 .field--label:after {
     content: ':';
 }
